updated to code
updated the code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <h1>My App</h1>
-<p>Keep track of the media I want to watch.</p>
+<p class="description" >Keep track of the media I want to watch.</p>
