--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
         <h1>My App</h1>
         <p class="description" >Keep track of the media I want to watch.</p>
     </header>
-    <mw-media-item></mw-media-item>
+    <mw-media-item (delete)="onMediaItemDelete($event)"
+     [mediaItem]="firstMediaItem"></mw-media-item>
 </section>
